<resources>

    <!-- Strings -->
    <string name="app_name">Vote by Somo</string>
    <string name="add_vote">Add A Vote</string>
    <string name="uon_es_title">University of Nairobi \nElectoral System</string>
    <string name="email_placeholder">Email</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="dont_have_an_account">Don\'t have an account… Sign Up</string>
    <string name="user_login">User Login</string>
    <string name="create_account">Create Account</string>
    <string name="login_button_text">Login</string>
    <string name="confirm_password_placeholder">Confirm Password</string>
    <string name="signup_button_text">Sign UP</string>
    <string name="already_have_an_account">Already have an account… Log in</string>
    <string name="dashboard_header_placeholder">Welcome: User</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="role_placeholder">Role</string>
    <string name="dashboard_item">Dashboard Item</string>
    <string name="contestant_name">Daniel Githiomi</string>
    <string name="votes_text">Votes: </string>
    <string name="votes_count">20</string>
    <string name="error_text">Cannot Retrieve Data. \n\nCheck network connection.</string>
    <string name="instructions_placeholder">Instructions here</string>
    <string name="votes_for_text">Vote For:</string>

    <!-- String arrays -->
    <string-array name="roles">
        <item>An Admin</item>
        <item>A Voter</item>
    </string-array>

    <string-array name="admin_dashboard">
        <item>All Candidates</item>
        <item>Positions Viable</item>
        <item>Candidates Per Position</item>
        <item>Specific Candidate</item>
        <item>Votes</item>
    </string-array>

    <string-array name="voter_dashboard">
        <item>School President</item>
        <item>Vice President</item>
        <item>Treasurer</item>
        <item>Secretary</item>
        <item>Sports Secretary</item>
        <item>ICT &amp; Innovation Secretary</item>
        <item>Education Secretary</item>
        <item>Residential Life Representative</item>
        <item>Wellness Secretary</item>
        <item>Medical and Environmental Secretary</item>
    </string-array>

    // For the contestants
    <string-array name="school_president">
        <item>Carina Clay</item>
        <item>Lavinia Lamb</item>
        <item>Bernadette O'Brien</item>
        <item>Tyron Dickinson</item>
    </string-array>

    <string-array name="vice_president">
        <item>Tom Hernandez</item>
        <item>Tahmid Foster</item>
    </string-array>

    <string-array name="treasurer">
        <item>Lillie-May Knights</item>
        <item>Nazia Olson</item>
        <item>Catriona Hendrix</item>
    </string-array>

    <string-array name="secretary">
        <item>Riley-Jay Mcintyre</item>
        <item>Jayne Mcconnell</item>
    </string-array>

    <string-array name="sports_president">
        <item>Elora Galvan</item>
        <item>Lianne Vance</item>
        <item>Lyra Thorpe</item>
        <item>Peter Ward</item>
    </string-array>

    <string-array name="ict_and_innovation">
        <item>Haya Whelan</item>
        <item>Raja Day</item>
        <item>Amba Humphreys</item>
        <item>Umayr Jeffery</item>
        <item>Koa Holcomb</item>
    </string-array>

    <string-array name="education_secretary">
        <item>Bear Sheppard</item>
        <item>Kurtis Richards</item>
        <item>Kurtis Richards</item>
        <item>Madina Hester</item>
    </string-array>

    <string-array name="resLifeSecretary">
        <item>Aiesha Ferreira</item>
        <item>Zidane Philip</item>
    </string-array>

    <string-array name="wellness_secretary">
        <item>Luke Joseph</item>
        <item>Yuvaan Gale</item>
        <item>Rohit Heaton</item>
        <item>Ella-Mae Alfaro</item>
    </string-array>

    <string-array name="medSecretary">
        <item>Morris Fields</item>
    </string-array>

    <string-array name="school_president">
        <item>James Kagiri</item>
        <item>Ted Daniel</item>
        <item>Justus Wamswa</item>
    </string-array>

</resources>