<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15sp"
    app:cardElevation="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

        <TextView
            android:id="@+id/contestantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_toStartOf="@id/addVoteButton"
            android:background="@color/white"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/contestant_name"
            android:textColor="@color/vote_logo_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/votesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contestantName"
            android:layout_margin="3dp"
            android:background="@color/white"
            android:clickable="true"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="10dp"
            android:text="@string/votes_text"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/votesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contestantName"
            android:layout_margin="3dp"
            android:layout_toEndOf="@id/votesText"
            android:background="@color/white"
            android:clickable="true"
            android:paddingStart="1dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="10dp"
            android:text="@string/votes_count"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/addVoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:contentDescription="@string/add_vote"
            android:padding="15dp"
            android:src="@drawable/ic_add_vote" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>