<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UI.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rvToSignUp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/app_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/user_login"
                android:textAllCaps="true"
                android:textColor="@color/vote_logo_color"
                android:textSize="22sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/vote_blue"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="3dp"
                        android:background="@color/white"
                        android:hint="@string/email_placeholder"
                        android:textColorHint="@color/vote_logo_color"
                        app:boxStrokeColor="@color/white"
                        app:boxStrokeWidthFocused="3dp"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/vote_logo_color"
                        app:hintAnimationEnabled="true"
                        app:hintTextColor="@color/vote_logo_color"
                        app:startIconDrawable="@drawable/ic_email"
                        app:startIconTint="@color/vote_logo_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edEmail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:background="@color/white"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@color/vote_logo_color"
                            android:textSize="13sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="3dp"
                        android:background="@color/white"
                        android:hint="@string/password_placeholder"
                        android:textColorHint="@color/vote_logo_color"
                        app:boxStrokeColor="@color/white"
                        app:boxStrokeWidthFocused="3dp"
                        app:endIconMode="password_toggle"
                        app:endIconTint="@color/vote_logo_color"
                        app:hintAnimationEnabled="true"
                        app:hintTextColor="@color/vote_logo_color"
                        app:startIconDrawable="@drawable/ic_lock"
                        app:startIconTint="@color/vote_logo_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:background="@color/white"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:textCursorDrawable="@color/vote_logo_color"
                            android:textSize="13sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvLoginBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:elevation="30dp"
                        app:cardBackgroundColor="@color/vote_logo_color"
                        app:cardCornerRadius="15dp">

                        <Button
                            android:id="@+id/btnLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@color/transparent"
                            android:text="@string/login_button_text"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>

                    <ProgressBar
                        android:id="@+id/loginProgressBar"
                        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminateTint="@color/vote_logo_color"
                        android:visibility="gone" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/rvToSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tvToSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:clickable="true"
            android:padding="3dp"
            android:text="@string/dont_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/vote_logo_color"
            android:textSize="14sp" />

    </RelativeLayout>


</RelativeLayout>